demo-ai-app/manifests/deploy_postgres.yaml
# pg deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: hwal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          subPath: pg
          readOnly: false
          name: pg-volume
      volumes:
      - name: pg-volume
        persistentVolumeClaim:
          claimName: pg-pvc
---
#pg service
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: hwal
spec:
  type: NodePort
  ports:
   - port: 5432
  selector:
   app: postgres
