demo-ai-app/manifests/deploy_redis.yaml
#redis deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: hwal
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:alpine
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        command: ["redis-server", "/conf/redis.conf", "--requirepass", "$(REDIS_PASSWORD)"]
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: config
          mountPath: /conf
          readOnly: true
        - name: redis-data
          mountPath: /data
          readOnly: false
      volumes:
      - name: config
        configMap:
          name: ai-app-conf
          items:
          - key: redis.conf
            path: redis.conf
      - name: redis-data
        emptyDir: {}
---
#redis service
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: hwal
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
