demo-ai-app/manifests/deploy_app_monitor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-app-mon
  namespace: hwal
spec:
  replicas: 1
  selector:
    matchLabels:
      run: ai-app-mon
  template:
    metadata:
      labels:
        run: ai-app-mon
    spec:
      serviceAccountName: kmonitor-sa
      containers:
      - name: ai-app-mon-container
        image: aidamian/basic_cluster_monitor_test 
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "1024Mi"
            cpu: "1000m"
        ports:
        - containerPort: 4041
          protocol: TCP
        #enviroment variables
        volumeMounts:
        - name: ai-app-storage
          mountPath: /test_app/.cache
      volumes:
      - name: ai-app-storage
        persistentVolumeClaim:
          claimName: ai-app-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: ai-app-mon-svc
  namespace: hwal
spec:
  type: ClusterIP
  selector:
    run: ai-app-mon
  ports:
    - protocol: TCP
      port: 4041
      targetPort: 4041
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-app-mon-ingress
  namespace: hwal
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /ai_test_monitor(/|$)(.*) # 172..../ai_test_monitor/health
        pathType: Prefix
        backend:
          service:
            name: ai-app-mon-svc
            port:
              number: 4041
