demo-ai-app/manifests/deploy_ngrok_monitor.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-app-mon-ngrok
  namespace: hwal
spec:
  ingressClassName: ngrok
  rules:
  - host: impala-possible-molly.ngrok-free.app
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ai-app-mon-svc
              port:
                number: 4041
